Update media; spacing fixes.

--- a/src/stylesheets/App.css
+++ b/src/stylesheets/App.css
@@ -487,6 +487,7 @@ form > .small-col {
 }
 
 #about-us {
+  z-index: 1;
   padding-top: 200px;
 }
 #aboutus-body {
